<resources>
    <string name="app_name">HW1_Mehedint</string>
    <string name="input_amount">Input Amount</string>
    <string name="aud">AUD</string>
    <string name="cad">CAD</string>
    <string name="inr">INR</string>
    <string name="convert_to">Convert to</string>
    <string name="usd">USD</string>
    <string name="gbp">GBP</string>
    <string name="convert">Convert</string>
    <string name="clear">Clear</string>
</resources>
