<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mihai.hw1_mehedint.MainActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/InptAmnt"
        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="Input Amount"
        android:padding="10dp"
        android:singleLine="true"
        android:maxWidth="200dp"
        android:width="200dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:shadowColor="@color/colorAccent"

        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InptAmnt"
        android:layout_centerHorizontal="true"
        android:id="@+id/CurrencyFrom"
        android:padding="10dp"
        android:textStyle="bold">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aud"
            android:id="@+id/aud"
            android:textStyle="bold"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cad"
            android:id="@+id/cad"
            android:textStyle="bold"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inr"
            android:id="@+id/inr"
            android:textStyle="bold"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_to"
        android:id="@+id/convTo"
        android:layout_below="@+id/CurrencyFrom"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/convTo"
        android:layout_centerHorizontal="true"
        android:id="@+id/CurrencyTo"
        android:textStyle="bold">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usd"
            android:id="@+id/usd"
            android:textStyle="bold"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gbp"
            android:id="@+id/gbp"
            android:textStyle="bold"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:id="@+id/buttonConvert"
        android:layout_below="@+id/CurrencyTo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convResult"
        android:layout_below="@+id/buttonConvert"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:singleLine="true"
        android:maxWidth="200dp"
        android:width="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/buttonClear"
        android:layout_below="@+id/convResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:textStyle="bold"/>

</RelativeLayout>
